# cdfbuild

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
scripts/: build.bat  initialize.bat
tmp/: .gitignore
